# Bicol-Dialect-Part-of-Speech-Tagger-BPOS

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
bpostagger/: BPOS_Tagger.py  CRF_model.py  Configuration.py  annotate.py  features.py  search.py  tokenizer.py
bpostagger/datasets/: tagged.txt  tagged_v2.txt  untagged.txt
bpostagger/ui/: BPOS_Tagger.py  BPOS_Ui.ui  Configuration_Ui.py  Configuration_Ui.ui
